# clock-fw

./: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  swagger.yaml
.github/workflows/: dev.yml  release.yml
components/clock-app/: CMakeLists.txt  Kconfig  README.md
components/kd_common/include/: kd_common.h
components/kd_common/src/: console.cpp  crypto.cpp  provisioning.cpp
components/kd_common_bak/src/: crypto.h  kd_common.cpp  provisioning.cpp
docs/: api-swagger.yaml
main/: CMakeLists.txt  Kconfig.projbuild  clock_events.cpp  clock_events.h  clock_time_ticker.cpp  clock_time_ticker.h  def.h  fibonacci_handlers.cpp  idf_component.yml  main.cpp
main/api/: api.cpp  api.h  led_api.cpp  led_api.h  led_handlers.cpp  led_handlers.h  static_files.h
main/device_manager/: device_manager.cpp  device_manager.h
main/fibonacci/: clock.cpp  clock.h  fibonacci.cpp  fibonacci.h  fibonacci_handlers.cpp  fibonacci_handlers.h  handlers.cpp  handlers.h  themes.h
main/gps/: gps.cpp  gps.h  nmea_parser.c  nmea_parser.h
main/internet_time/: embedded_tz_db.h  internet_time.cpp  internet_time.h
main/led/: led.cpp  led.h  led_strip_encoder.cpp
main/modbus/: modbus.cpp  modbus.h
main/nixie/: clock.cpp  clock.h  handlers.cpp  handlers.h  nixie.cpp  nixie.h  nixie_handlers.cpp  nixie_handlers.h  nixie_oe.cpp  nixie_oe.h  nixie_spi.cpp  nixie_spi.h  themes.cpp
main/packet_processing/: packet_processing.cpp  packet_processing.h
main/uart/: uart.cpp  uart.h
main/wordclock/: clock.cpp  handlers.cpp  handlers.h  themes.h  wordclock.cpp  wordclock.h
variants/: fiboclock  fibonacci  fibonacci_dev  mothership  nixie  nixieclock  rover  wordclock
